<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="education.mahmoud.quranyapp.feature.home_Activity.Home">


    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/actionJump"
        android:orderInCategory="100"
        android:title="@string/jump"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionGoToLastRead"
        android:orderInCategory="100"
        android:title="@string/go_to_latest_read"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/actionBookmark"
        android:icon="@drawable/ic_bookmark_icon"
        android:orderInCategory="100"
        android:title="@string/saved"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/actionReadLog"
        android:orderInCategory="100"
        android:title="@string/readlog"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionDownload"
        android:orderInCategory="100"
        android:title="@string/download"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/actionScore"
        android:orderInCategory="100"
        android:title="@string/score"
        android:visible="false"

        app:showAsAction="never" />


    <item
        android:id="@+id/actionSetting"
        android:orderInCategory="100"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"
        android:visible="false"
        app:showAsAction="never" />

</menu>
