<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="education.mahmoud.quranyapp.feature.SuraDetails">


    <item
        android:id="@+id/actionGoToLastRead"
        android:orderInCategory="100"
        android:title="@string/go_to_latest_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionSearch"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionListening"
        android:orderInCategory="100"
        android:title="@string/open_listening"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionTestText"
        android:orderInCategory="100"
        android:title="@string/test_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionSetting"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never" />


</menu>
