<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".feature.test_quran.TestFragment">

    <LinearLayout
        android:id="@+id/lnSelectorAyahs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/start_from"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/whiteTextColor"
                android:layout_marginEnd="@dimen/_5sdp"/>

            <Spinner
                android:id="@+id/spStartSura"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:background="@drawable/back_edit_search" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edStartSuraAyah"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/back_edit_search"
                android:hint="@string/start_ayah"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="@dimen/_10sdp"
                android:padding="@dimen/_6sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/end_at"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/whiteTextColor"
                android:layout_marginEnd="@dimen/_5sdp"/>

            <Spinner
                android:id="@+id/spEndSura"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:background="@drawable/back_edit_search" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edEndSuraAyah"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/back_edit_search"
                android:hint="@string/end_ayah"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="@dimen/_10sdp"
                android:padding="@dimen/_6sdp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnTestSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/back_search_res"
                android:text="@string/btn_start"
                android:textColor="@color/bg_white" />

            <Button
                android:id="@+id/btnTestSaveRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/back_search_res"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="@dimen/_6sdp"
                android:text="@string/btn_start_random"
                android:textColor="@color/bg_white" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnTestLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTestRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/rangeoftest"
            android:textColor="@color/bg_white"
            android:textSize="@dimen/textRange" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_desc"
            android:orientation="vertical"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_13sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_color_represent_missing_text"
                android:textColor="@color/descrip_text"
                android:textSize="@dimen/describeColors" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellow_color_represent_additional_wrong_text"
                android:textColor="@color/descrip_text"
                android:textSize="@dimen/describeColors" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_color_represent_correct_text"
                android:textColor="@color/descrip_text"
                android:textSize="@dimen/describeColors" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAyahToTestAfter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ayahToTestRanom"
            android:textColor="@color/ayas_color"
            android:textSize="@dimen/_22ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTestText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>