<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_5sdp"
    android:background="@color/white_80"
    android:layoutDirection="rtl"
    android:padding="@dimen/_8sdp">


    <TextView
        android:id="@+id/tvSuraNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/sura_num"
        android:textColor="@color/secondaryLightColor"
        android:textSize="@dimen/tvFont" />


    <TextView
        android:id="@+id/tvSuraName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="3"
        android:gravity="start"
        android:text="@string/sura_name"
        android:textColor="@color/secondaryLightColor"
        android:textSize="@dimen/tvFont" />


    <ImageView
        android:id="@+id/tvSuraRevolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/tvSuraPageNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/start_page"
        android:textColor="@color/secondaryLightColor"
        android:textSize="@dimen/tvFont" />


    <TextView
        android:id="@+id/tvSuraAyahsNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ayahs_count"
        android:textColor="@color/secondaryLightColor"
        android:textSize="@dimen/tvFont" />


</LinearLayout>