<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.read_log.ReadLogFragment"
    android:padding="@dimen/_8sdp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="@dimen/_8sdp">

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:textSize="@dimen/tv_read_log"
          android:textColor="@color/tv_color"
          android:text="@string/date"/>

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:layout_weight="1"
          android:textColor="@color/tv_color"
          android:textSize="@dimen/tv_read_log"
          android:text="@string/no_pages"/>


      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textColor="@color/tv_color"
          android:gravity="center_horizontal"
          android:textSize="@dimen/tv_read_log"
          android:ellipsize="end"
          android:maxLines="1"
          android:text="@string/pages_num"/>




   </LinearLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvReadLog"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>

</LinearLayout>